--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "lit": "^3.0.1",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
